Added classes VertexArray and VertexArrayLayout.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ add_executable(${PROJECT_NAME}
 	src/Renderer/VertexBuffer.cpp
 	src/Renderer/IndexBuffer.h
 	src/Renderer/IndexBuffer.cpp
+	src/Renderer/VertexBufferLayout.h
+	src/Renderer/VertexBufferLayout.cpp
+	src/Renderer/VertexArray.h
+	src/Renderer/VertexArray.cpp
 	src/Renderer/ShaderProgram.h
 	src/Renderer/ShaderProgram.cpp
 	src/Renderer/Texture2D.h
