--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ add_executable(${PROJECT_NAME}
 	src/Renderer/VertexBufferLayout.cpp
 	src/Renderer/VertexArray.h
 	src/Renderer/VertexArray.cpp
+	src/Renderer/Renderer.h
+	src/Renderer/Renderer.cpp
 	src/Renderer/ShaderProgram.h
 	src/Renderer/ShaderProgram.cpp
 	src/Renderer/Texture2D.h
@@ -44,6 +46,7 @@ add_subdirectory(external/glad)
 target_link_libraries(${PROJECT_NAME} glad)
 
 include_directories(external/glm)
+include_directories(external/rapidjson/include)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
 
