--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(${PROJECT_NAME})
 
 add_executable(${PROJECT_NAME}
 	src/main.cpp
+	src/System/Timer.h
+	src/System/Timer.cpp
 	src/Renderer/VertexBuffer.h
 	src/Renderer/VertexBuffer.cpp
 	src/Renderer/IndexBuffer.h
